<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_name"
        android:textColor="@android:color/black"
        android:typeface="normal" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvName"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/edit_text_line_color"
        android:typeface="normal"
        android:ems="10"
        android:enabled="false"
        android:textColor="@color/colorAccent"
        android:inputType="textPersonName"
        android:text="Sukhdeep Kaur" />

    <TextView
        android:id="@+id/tvPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@+id/etName"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/txt_phone_number"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:typeface="normal" />

    <EditText
        android:id="@+id/etPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvPhoneNo"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/edit_text_line_color"
        android:typeface="normal"
        android:ems="10"
        android:enabled="false"
        android:textColor="@color/colorAccent"
        android:inputType="textPersonName"
        android:text="9765243334" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etPhoneNo"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:text="@string/txt_email"
        android:typeface="normal"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/edit_text_line_color"
        android:typeface="normal"
        android:drawableRight="@drawable/pencil"
        android:textColor="@color/colorAccent"
        android:inputType="textEmailAddress"
        android:text="sukhdeep.kaur@gmail.com"
        android:layout_below="@+id/tvEmail"
        android:layout_alignLeft="@+id/tvEmail"
        android:layout_alignStart="@+id/tvEmail" />
    <com.rafakob.drawme.DrawMeLinearLayout
        android:id="@+id/llChooseSlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dm_backColor="@android:color/white"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tvProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_choose_time_slot"
            android:textAlignment="gravity"
            android:textColor="@android:color/black"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:textSize="12sp"
            android:typeface="normal"
            android:textAllCaps="true"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/ivforwordLabByU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/arrow_forward_grey" />
    </com.rafakob.drawme.DrawMeLinearLayout>
<View
    android:id="@+id/view"
    android:layout_below="@+id/llChooseSlot"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="8dp"
    android:background="#E1E1E1"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"/>


    <TextView

        android:id="@+id/tvChooseDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@+id/view"
        android:layout_marginTop="8dp"
        android:text="@string/txt_choose_days"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:typeface="normal" />

    <ToggleButton
        android:textOn="@string/txt_s"
        android:textOff="@string/txt_s"
        android:background="@drawable/style_toggle_button_chdays"
        android:id="@+id/tbSunday"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/txt_s"
        android:layout_below="@+id/tvChooseDays"
        android:textAlignment="center"
        android:textColor="@drawable/toggle_button_text_color"
        android:typeface="normal" />

    <ToggleButton
        android:textOn="@string/txt_m"
        android:textOff="@string/txt_m"
        android:background="@drawable/style_toggle_button_chdays"
        android:id="@+id/tbMonday"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_below="@+id/tvChooseDays"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:typeface="normal"
        android:textSize="12sp"
        android:layout_marginLeft="8dp"
        android:textColor="@drawable/toggle_button_text_color"
        android:layout_toEndOf="@+id/tbSunday"
        android:text="@string/txt_m"
        android:layout_toRightOf="@+id/tbSunday" />

    <ToggleButton
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:textOn="@string/txt_t"
        android:textOff="@string/txt_t"
        android:background="@drawable/style_toggle_button_chdays"
        android:id="@+id/tbTuesday"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/tbMonday"
        android:layout_toRightOf="@+id/tbMonday"
        android:layout_below="@+id/tvChooseDays"
        android:textSize="12sp"
        android:text="@string/txt_t"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:typeface="normal"
        android:textColor="@drawable/toggle_button_text_color"/>


    <ToggleButton
        android:textOn="@string/txt_w"
        android:textOff="@string/txt_w"
        android:background="@drawable/style_toggle_button_chdays"
        android:id="@+id/tbWedesday"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/tbTuesday"
        android:layout_toRightOf="@+id/tbTuesday"
        android:layout_below="@+id/tvChooseDays"
        android:textSize="12sp"
        android:text="@string/txt_w"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:typeface="normal"
        android:textColor="@drawable/toggle_button_text_color"/>

    <ToggleButton
        android:textOn="@string/txt_tu"
        android:textOff="@string/txt_tu"
        android:background="@drawable/style_toggle_button_chdays"
        android:id="@+id/tbThusday"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/tbWedesday"
        android:layout_toRightOf="@+id/tbWedesday"
        android:layout_below="@+id/tvChooseDays"
        android:textSize="12sp"
        android:text="@string/txt_tu"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:typeface="normal"
        android:textColor="@drawable/toggle_button_text_color"/>

    <ToggleButton
        android:textOn="@string/txt_tu"
        android:textOff="@string/txt_tu"
        android:background="@drawable/style_toggle_button_chdays"
        android:id="@+id/tbFriday"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/tbThusday"
        android:layout_toRightOf="@+id/tbThusday"
        android:layout_below="@+id/tvChooseDays"
        android:textSize="12sp"
        android:text="@string/txt_tu"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:typeface="normal"
        android:textColor="@drawable/toggle_button_text_color"/>

    <ToggleButton
        android:textOn="@string/txt_su"
        android:textOff="@string/txt_su"
        android:background="@drawable/style_toggle_button_chdays"
        android:id="@+id/tbSuturday"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/tbFriday"
        android:layout_toRightOf="@+id/tbFriday"
        android:layout_below="@+id/tvChooseDays"
        android:textSize="12sp"
        android:text="@string/txt_su"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:typeface="normal"
        android:textColor="@drawable/toggle_button_text_color"/>
    <View
        android:id="@+id/view2"
        android:layout_below="@+id/tbSunday"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="#E1E1E1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"/>
    <TextView
        android:id="@+id/tvAppPics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view2"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/txt_app_pics"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scrollbars="none"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/tvAppPics"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@+id/buttonAddApnt">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llAppPics"
        android:layout_width="wrap_content"
        android:layout_height="70dp">
<!--<ImageView
            android:id="@+id/ivAppPics"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
           app:srcCompat="@drawable/blog_small_2" />
        <ImageView
            android:id="@+id/ivAppPics2"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/blog_small_2" />
        <ImageView
            android:id="@+id/ivAppPics3"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/blog_small_2" />-->

    </LinearLayout>
    </HorizontalScrollView>
    <com.rafakob.drawme.DrawMeButton
        android:id="@+id/buttonAddApnt"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@+id/tvAppPics"
        android:layout_marginTop="8dp"
        android:text="@string/btn_add_more"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_alignParentEnd="true"
        android:drawableTop="@drawable/pr_add_more"
        app:dm_backColor="@color/colorAccent"
        app:dm_backColorDisabled="@android:color/white"
        app:dm_backColorPressed="@android:color/holo_red_dark"
        app:dm_shapeRadiusHalfHeight="false" />
    <com.rafakob.drawme.DrawMeButton
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_save"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:typeface="normal"
        app:dm_backColor="@color/colorAccent"
        app:dm_backColorDisabled="@android:color/white"
        app:dm_backColorPressed="@android:color/holo_red_dark"
        app:dm_shapeRadiusHalfHeight="false" />


</RelativeLayout>
    </layout>