<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvFeedbackReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:textSize="14sp"
        android:textStyle="normal"
        android:typeface="normal"
        android:textColor="@android:color/black"
        android:text="@string/txt_feedback_report" />

    <TextView
        android:id="@+id/tvTypeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvFeedbackReport"
        android:textColor="#333333"
        android:textAllCaps="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:textStyle="normal"
        android:typeface="normal"
        android:text="@string/txt_type_message" />

    <EditText
        android:id="@+id/etFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:paddingBottom="20dp"
        android:typeface="normal"
        android:ems="10"
        android:background="@drawable/edit_text_line_blue"
        android:textColor="@color/colorAccent"
        android:inputType="textMultiLine"
        android:layout_below="@+id/tvTypeMessage"
        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the indutry's dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book it has survived not only five centuries, but also the leap into electronic typesetting, remaining essencially unchanged."/>


    <com.rafakob.drawme.DrawMeButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:textSize="12sp"
        android:text="@string/txt_btn_submit"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:dm_backColor="@color/colorAccent"
        app:dm_backColorDisabled="@android:color/white"
        app:dm_backColorPressed="@android:color/holo_red_dark"
        app:dm_shapeRadiusHalfHeight="true"
        android:layout_below="@+id/etFeedback"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"/>
</RelativeLayout>